Added line annotations

--- a/index.html
+++ b/index.html
@@ -24,9 +24,27 @@
     <div class="chart-container">
         <div id="choropleth_map"></div>
     </div>
+    <div class="annotation">
+        <h3>Drug Addicts per 100,000 Population by State in Malaysia (2021)</h3>
+        <p>This choropleth map visualizes the distribution of drug addicts across Malaysian states. Darker shades indicate a higher number of drug addicts per 100,000 population. Key observations:</p>
+        <ul>
+            <li>States with darker shades have a higher prevalence of drug addiction.</li>
+            <li>The map allows for quick identification of regions that may require more focused intervention programs.</li>
+            <li>Hover over each state to see specific numbers and rates.</li>
+        </ul>
+    </div>
     
     <div class="chart-container">
         <div id="drug_types_chart"></div>
+    </div>
+    <div class="annotation">
+        <h3>Number of Addicts by Drug Type</h3>
+        <p>This bar chart shows the number of addicts for different types of drugs. Important features:</p>
+        <ul>
+            <li>The chart uses a square root scale to better display both large and small values.</li>
+            <li>You can select different years using the dropdown menu to see how drug preferences have changed over time.</li>
+            <li>The drug types are sorted in descending order, making it easy to identify the most prevalent drugs.</li>
+        </ul>
     </div>
 
     <script>
